  application window otherwise the taskbar will be on the top and
  keyboard input will not be received by the top application.
* NxWM::CTaskbar:  Bugfix... previous window should not be minimized
  when a new window is started.  It should stay in a maximized state
  so that it will re-appear with the window above it is closed or
  minimized.
* NxWM::CHexCalculator:  Add a hexadecimal/decimal calculator
  example.
* NXWidgets::CNxTkWindow:  Back out height adjustment in the getSize()
  method.  The code was correct as it was before.
* NXWidgets::CButtonArray and NXWidgets::CGraphicsPort:  There is
  a kludge in there to handle the case where we cannot read the
  background data because the LCD does not support read operations.
  In that case, we just use the default background color.  However,
  that doesn't work either for the case where the background color
  changes when the widget is selected.  Then the background color
  in the font is wrong.  Fixed in CButtonArrary, but the problem
  probably exists in other places as well.
* NxWM:  Increase default spacing of icons on the Start Window.
* NxWM::CHexCalculator:  Fix some non-standard calculator behavior
  after = is pressed.  Use upper case hex.  Increase font size.
* nxwm/Makefile:  Fix error that creapt in during some other
  recent check-ins.

1.3 2012-09-29 Gregory Nutt <gnutt@nuttx.org>

* UnitTests/*/main.cxx:  Change entry point name to be consistent
  with with entry point naming conventions introduced in NuttX
  6.22.
* Kconfig:  Added a mconfig configuration file.  Eventually, NxWidgets
  needs to get hooked into the NuttX mconf configuration.  Still not
  exactly sure how to do that.
* libnxwidgets/Makefile and NxWidgets/nxwm/Makefile:  Need updates
  for consistency with recent changes to NuttX build system (>= 6.22)
* Kconfig:  Add option to turn on the memory monitor feature of the
  NxWidgets/NxWM unit tests.

1.4 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>